--- a/react/components/BulletGroup/styles.css
+++ b/react/components/BulletGroup/styles.css
@@ -1,3 +1,23 @@
+.bullet__container {
+    display : flex;
+    overflow: auto;
+}
+
+.bullet__container::-webkit-scrollbar {
+    height: 4px;
+}
+
+.bullet__container::-webkit-scrollbar-track,
+.bullet__container::-webkit-scrollbar-thumb {
+    background-clip : padding-box;
+    background-color: #969696;
+    border-right    : 16px solid transparent;
+}
+
+.bullet__container::-webkit-scrollbar-thumb {
+    background-color: #484848;
+}
+
 .bullet__item {
     padding: 15px;
 }
